2013-03-25  Dirk Schulze  <dschulze@adobe.com>
	Removed decomposing code. Not necessary anymore with the normative reference to CSS Transforms.

2013-03-13  Dirk Schulze  <dschulze@adobe.com>
	Incorporate feedback from Robert O'Callahan.
	http://lists.w3.org/Archives/Public/public-fx/2013JanMar/0128.html

2013-03-11  Dirk Schulze  <dschulze@adobe.com>
	Add Conformance section.

2013-03-10  Dirk Schulze  <dschulze@adobe.com>
	Remove issues for 3D arguments on rotateFromVectorBy and rotateFromVector.

2013-03-09  Dirk Schulze  <dschulze@adobe.com>
	Added Float64Array type and reference to Typed-Array spec.

2013-03-08  Dirk Schulze  <dschulze@adobe.com>
	Update normative references.

2013-03-08  Dirk Schulze  <dschulze@adobe.com>
	New naming for origin arguments.

2013-03-07  Dirk Schulze  <dschulze@adobe.com>
	Fixed typos in defitnions.

2013-03-07  Dirk Schulze  <dschulze@adobe.com>
	'rotate' and 'rotateBy' should be pure 2D operations.
	More detailed example for passing DOM string and stringifier.

2013-03-07  Dirk Schulze  <dschulze@adobe.com>
	Fixed typos in defitnions.