@@ -347,7 +347,7 @@
 
 <!-- ****************************************************************************** -->
 
-<h2 id="definitions">Definitions</h2>
+<h2 id="definitions">Terminology</h2>
 
 <p>
   When used in this specification, terms have the meanings assigned in this section.
