@@ -10,7 +10,7 @@
 
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-06-12 name=dcterms.date>
+  <meta content=2013-06-29 name=dcterms.date>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
@@ -33,14 +33,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 12 June 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 29 June 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dev.w3.org/fxtf/filters/">http://dev.w3.org/fxtf/filters/</a>
-     <!--http://www.w3.org/TR/2013/WD-filters-20130612/-->
+     <!--http://www.w3.org/TR/2013/WD-filters-20130629/-->
 
     <dt>Latest version:
 
@@ -179,7 +179,7 @@
 
    <li><a href="#values"><span class=secno>3. </span>Values</a>
 
-   <li><a href="#definitions"><span class=secno>4. </span>Definitions</a>
+   <li><a href="#definitions"><span class=secno>4. </span>Terminology</a>
 
    <li><a href="#FilterProperty"><span class=secno>5. </span> The ‘<code
     class=property>filter</code>’ property </a>
@@ -790,7 +790,7 @@
    explicitly.</p>
   <!-- ****************************************************************************** -->
 
-  <h2 id=definitions><span class=secno>4. </span>Definitions</h2>
+  <h2 id=definitions><span class=secno>4. </span>Terminology</h2>
 
   <p> When used in this specification, terms have the meanings assigned in
    this section.
