@@ -46,12 +46,12 @@
       </p>
 
       <p>
-        The transformation matrix interface replaces the SVGMatrix interface from SVG [[SVG11]]. It is a common interface used to describe 2D and 3D transformations on a graphical context for SVG, Context2D [[CANVAS-2D]], CSS3 Transforms [[CSS3-TRANSFORMS]]<!-- and WebGL [[WEBGL]] -->.
+        The transformation matrix interface replaces the SVGMatrix interface from SVG [[SVG11]]. It is a common interface used to describe 2D and 3D transformations on a graphical context for SVG, Canvas 2D Context [[CANVAS-2D]] and CSS Transforms [[CSS3-TRANSFORMS]]<!-- and WebGL [[WEBGL]] -->.
       </p>
     </section>
 
     <section>
-      <h2>Definitions</h2>
+      <h2>Terminology</h2>
       <dl>
         <dt><dfn>post-multiply</dfn></dt>
         <dd>Term A post-multiplied by term B is equal to A &middot; B.</dd>
@@ -133,6 +133,13 @@
       <p>
         The <a>CSSMatrix</a> interface represents a mathematical matrix with the purpose of describing transformations a graphical contexts. The following sections describe the details of the interface. For the full interface see <a href="#webidl-ref">Interface summary</a>.
       </p>
+
+      <div class="figure">
+        <img src="images/4x4matrix.png" alt="4x4 matrix with items m11 to m44">
+        <p class="capture">A 4x4 matrix representing a <a>CSSMatrix</a> with items m11 to m44.</p>
+      </div>
+
+      <p class="issue">It needs to be decided if CSSMatrix stored single or double precision floating point numbers.</p>
 
       <section>
         <h3>The constructors</h3>
@@ -383,7 +390,8 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double tz = 0</dt>
                 <dd>Optional translation value along the z-axis.</dd>
               </dl>
-              Post-multiplies a translation transformation on the current matrix and returns the resulting matrix. The current matrix is not modified.
+              <p>Post-multiplies a translation transformation on the current matrix and returns the resulting matrix. The current matrix is not modified.</p>
+              <p>The 3D translation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Translate3dDefined">described</a> in CSS Transforms [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>CSSMatrix scale()</dt>
             <dd>
@@ -395,7 +403,8 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double originY = 0</dt>
                 <dd>Transformation origin on the y-axis.</dd>
               </dl>
-              Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = scale</code>) on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.
+              <p>Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = scale</code>) on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.</p>
+              <p>The 2D scale matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#ScaleDefined">described</a> in CSS Transforms with <code>sx = sy = scale</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>CSSMatrix scale3d()</dt>
             <dd>
@@ -409,7 +418,8 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double originZ = 0</dt>
                 <dd>Transformation origin on the z-axis.</dd>
               </dl>
-              Post-multiplies a uniform scale transformation (<code>m11 = m22 = m33 = scale</code>) on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.
+              <p>Post-multiplies a uniform scale transformation (<code>m11 = m22 = m33 = scale</code>) on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.</p>
+              <p>The 3D scale matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Scale3dDefined">described</a> in CSS Transforms with <code>sx = sy = sz = scale</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>CSSMatrix scaleNonUniform()</dt>
             <dd>
@@ -427,7 +437,8 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double originZ = 0</dt>
                 <dd>Transformation origin on the z-axis.</dd>
               </dl>
-              Post-multiplies a non-uniform scale transformation on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.
+              <p>Post-multiplies a non-uniform scale transformation on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.</p>
+              <p>The 3D scale matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Scale3dDefined">described</a> in CSS Transforms with <code>sx = scaleX</code>,  <code>sy = scaleY</code> and <code>sz = scaleZ</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>CSSMatrix rotate()</dt>
             <dd>
@@ -439,17 +450,19 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double originY = 0</dt>
                 <dd>Transformation origin on the y-axis.</dd>
               </dl>
-              Post-multiplies a rotation transformation on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.
+              <p>Post-multiplies a rotation transformation on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.</p>
+              <p>The 2D rotation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#RotateDefined">described</a> in CSS Transforms with <code>alpha = angle</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>CSSMatrix rotateFromVector(unrestricted double x, unrestricted double y)</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double x</dt>
-                <dd>The x coordinate of the vector (x,y). Must not be zero.</dd>
+                <dd>The x coordinate of the vector (x,y)<sup>T</sup>.</dd>
                 <dt>unrestricted double y</dt>
-                <dd>The y coordinate of the vector (x,y). Must not be zero.</dd>
+                <dd>The y coordinate of the vector (x,y)<sup>T</sup>.</dd>
               </dl>
-              Post-multiplies a rotation transformation on the current matrix and returns the resulting matrix. The rotation angle is determined by taking (+/-) atan(y/x). The direction of the vector (x, y) determines whether the positive or negative angle value is used. The current matrix is not modified.
+              <p>Post-multiplies a rotation transformation on the current matrix and returns the resulting matrix. The rotation angle is determined by the angle between the vector (1,0)<sup>T</sup> and (x,y)<sup>T</sup> in the clockwise direction. If <code>x</code> and <code>y</code> should both be zero, the angle is specified as zero. The current matrix is not modified.</p>
+              <p>The 2D rotation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#RotateDefined">described</a> in CSS Transforms where <code>alpha</code> is the angle between the vector (1,0)<sup>T</sup> and (x,y)<sup>T</sup> in degrees [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>CSSMatrix rotateAxisAngle(unrestricted double x, unrestricted double y, unrestricted double z, unrestricted double angle)</dt>
             <dd>
@@ -462,8 +475,9 @@ matrix.rotateBy(45);
                 <dd>The z coordinate of the vector (x,y,z).</dd>
                 <dt>unrestricted double angle</dt>
                 <dd>Rotation angle in degrees.</dd>
-                Post-multiplies a rotation transformation on the current matrix and returns the resulting matrix. The rotation of the transform is applied around the given vector. The current matrix is not modified.
               </dl>
+              <p>Post-multiplies a rotation transformation on the current matrix and returns the resulting matrix. The rotation of the transform is applied around the given vector. The current matrix is not modified.</p>
+              <p>The 3D rotation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Rotate3dDefined">described</a> in CSS Transforms with <code>alpha = angle</code> [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>CSSMatrix skewX()</dt>
             <dd>
@@ -471,7 +485,8 @@ matrix.rotateBy(45);
                 <dt>unrestricted double sx</dt>
                 <dd>Skew angle along the x-axis in degrees.</dd>
               </dl>
-              Post-multiplies a skewX transformation on the current matrix and returns the resulting matrix. The current matrix is not modified.
+              <p>Post-multiplies a skewX transformation on the current matrix and returns the resulting matrix. The current matrix is not modified.</p>
+              <p>The 2D skewX matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#SkewXDefined">described</a> in CSS Transforms with <code>alpha = sx</code> [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>CSSMatrix skewY()</dt>
             <dd>
@@ -479,7 +494,8 @@ matrix.rotateBy(45);
                 <dt>unrestricted double sy</dt>
                 <dd>Skew angle along the y-axis in degrees.</dd>
               </dl>
-              Post-multiplies a skewX transformation on the current matrix and returns the resulting matrix.
+              <p>Post-multiplies a skewX transformation on the current matrix and returns the resulting matrix.</p>
+              <p>The 2D skewY matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#SkewYDefined">described</a> in CSS Transforms with <code>beta = sy</code> [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>CSSMatrix multiply()</dt>
             <dd>
@@ -540,7 +556,8 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double tz = 0</dt>
                 <dd>Optional translation value along the z-axis.</dd>
               </dl>
-              Post-multiplies a translation transformation on the current matrix.
+              <p>Post-multiplies a translation transformation on the current matrix.</p>
+              <p>The 3D translation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Translate3dDefined">described</a> in CSS Transforms [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>void scaleBy()</dt>
             <dd>
@@ -552,7 +569,8 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double originY = 0</dt>
                 <dd>Transformation origin on the y-axis.</dd>
               </dl>
-              Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = scale</code>) on the current matrix with the given origin.
+              <p>Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = scale</code>) on the current matrix with the given origin.</p>
+              <p>The 2D scale matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#ScaleDefined">described</a> in CSS Transforms with <code>sx = sy = scale</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>void scale3dBy()</dt>
             <dd>
@@ -566,7 +584,8 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double originZ = 0</dt>
                 <dd>Transformation origin on the z-axis.</dd>
               </dl>
-              Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = m33 = scale</code>) on the current matrix with the given origin.
+              <p>Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = m33 = scale</code>) on the current matrix with the given origin.</p>
+              <p>The 3D scale matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Scale3dDefined">described</a> in CSS Transforms with <code>sx = sy = sz = scale</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>void scaleNonUniformBy()</dt>
             <dd>
@@ -584,7 +603,8 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double originZ = 0</dt>
                 <dd>Transformation origin on the z-axis.</dd>
               </dl>
-              Post-multiplies a non-uniform scale transformation on the current matrix with the given origin.
+              <p>Post-multiplies a non-uniform scale transformation on the current matrix with the given origin.</p>
+              <p>The 3D scale matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Scale3dDefined">described</a> in CSS Transforms with <code>sx = scaleX</code>,  <code>sy = scaleY</code> and <code>sz = scaleZ</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>void rotateBy()</dt>
             <dd>
@@ -596,7 +616,8 @@ matrix.rotateBy(45);
                 <dt>optional unrestricted double originY = 0</dt>
                 <dd>Transformation origin on the y-axis.</dd>
               </dl>
-              Post-multiplies a rotation transformation on the current matrix with the given origin.
+              <p>Post-multiplies a rotation transformation on the current matrix with the given origin.</p>
+              <p>The 2D rotation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#RotateDefined">described</a> in CSS Transforms with <code>alpha = angle</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>void rotateFromVectorBy(unrestricted double x, unrestricted double y)</dt>
             <dd>
@@ -606,7 +627,8 @@ matrix.rotateBy(45);
                 <dt>unrestricted double y</dt>
                 <dd>The y coordinate of the vector (x,y). Must not be zero.</dd>
               </dl>
-              Post-multiplies a rotation transformation on the current matrix. The rotation angle is determined by taking (+/-) atan(y/x). The direction of the vector (x, y) determines whether the positive or negative angle value is used.
+              <p>Post-multiplies a rotation transformation on the current matrix. The rotation angle is determined by the angle between the vector (1,0)<sup>T</sup> and (x,y)<sup>T</sup> in the clockwise direction. If <code>x</code> and <code>y</code> should both be zero, the angle is specified as zero.</p>
+              <p>The 2D rotation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#RotateDefined">described</a> in CSS Transforms where <code>alpha</code> is the angle between the vector (1,0)<sup>T</sup> and (x,y)<sup>T</sup> in degrees [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>void rotateAxisAngleBy(unrestricted double x, unrestricted double y, unrestricted double z, unrestricted double angle)</dt>
             <dd>
@@ -619,8 +641,9 @@ matrix.rotateBy(45);
                 <dd>The z coordinate of the vector (x,y,z).</dd>
                 <dt>unrestricted double angle</dt>
                 <dd>Rotation angle in degrees.</dd>
-                Post-multiplies a rotation transformation on the current matrix. The rotation of the transform is applied around the given vector.
               </dl>
+              <p>Post-multiplies a rotation transformation on the current matrix. The rotation of the transform is applied around the given vector.</p>
+              <p>The 3D rotation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Rotate3dDefined">described</a> in CSS Transforms with <code>alpha = angle</code> [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>void skewXBy()</dt>
             <dd>
@@ -628,7 +651,8 @@ matrix.rotateBy(45);
                 <dt>unrestricted double sx</dt>
                 <dd>Skew angle along the x-axis in degrees.</dd>
               </dl>
-              Post-multiplies a skewX transformation on the current matrix.
+              <p>Post-multiplies a skewX transformation on the current matrix.</p>
+              <p>The 2D skewX matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#SkewXDefined">described</a> in CSS Transforms with <code>alpha = sx</code> [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>void skewYBy()</dt>
             <dd>
@@ -636,7 +660,8 @@ matrix.rotateBy(45);
                 <dt>unrestricted double sy</dt>
                 <dd>Skew angle along the y-axis in degrees.</dd>
               </dl>
-              Post-multiplies a skewX transformation on the current matrix.
+              <p>Post-multiplies a skewX transformation on the current matrix.</p>
+              <p>The 2D skewY matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#SkewYDefined">described</a> in CSS Transforms with <code>beta = sy</code> [[!CSS3-TRANSFORMS]].</p>
             </dd>
             <dt>void invert()</dt>
             <dd>
@@ -706,6 +731,12 @@ matrix.scale3dBy(2);</code></pre>
           </dl>
       </section>
     </section>
+
+    <section>
+      <h2>Transformation to a 3x2 matrix</h2>
+      <p>Host languages might require an internal 3x2 matrix abstraction of a <a>CSSMatrix</a>. This transformation from a 4x4 matrix to a 3x2 by loosing information is described in section <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#MatrixDefined">Mathematical Description of Transform Functions</a> of CSS Transforms [[!CSS3-TRANSFORMS]].</p>
+    </section>
+
     <section class='appendix' id="webidl-ref">
       <h2>Interface summary</h2>
     </section>
