@@ -1,3 +1,8 @@
+2013-06-29  Dirk Schulze  <dschulze@adobe.com>
+	Incorporated feedback and added more references to CSS Transforms.
+	Translation, Rotation, Scale and Skew matrices described and referenced by CSS Transforms.
+	Definition for rotateFromVector function modified to be more precise.
+
 2013-03-25  Dirk Schulze  <dschulze@adobe.com>
 	Removed decomposing code. Not necessary anymore with the normative reference to CSS Transforms.
 
@@ -21,7 +26,7 @@
 	New naming for origin arguments.
 
 2013-03-07  Dirk Schulze  <dschulze@adobe.com>
-	Fixed typos in defitnions.
+	Fixed typos in definitions.
 
 2013-03-07  Dirk Schulze  <dschulze@adobe.com>
 	'rotate' and 'rotateBy' should be pure 2D operations.
